refactoring added plotly-allgraphs but not yet correct

--- a/services/dy-2Dgraph/plotly.ipynb
+++ b/services/dy-2Dgraph/plotly.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "hide_input": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Desktop\\alternative_config.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -15,12 +27,15 @@
       }
      }
     },
-    "hide_input": true
+    "hide_input": false
    },
    "outputs": [],
    "source": [
     "import simcore_api\n",
-    "from simcore_api import simcore\n"
+    "from simcore_api import simcore\n",
+    "from simcore_api import config\n",
+    "\n",
+    "data_path = simcore._inputs[0].value"
    ]
   },
   {
@@ -49,6 +64,7 @@
    "outputs": [],
    "source": [
     "import plotly.offline as offline\n",
+    "import plotly.figure_factory as ff\n",
     "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "import os\n",
@@ -57,24 +73,25 @@
     "\n",
     "column_name_map = {0: {\"name\":\"time [s]\"}, 1: {\"name\":\"rate\"}, 2: {\"name\":\"demand\"}, \n",
     "                   3: {\"name\":\"move/(max - min) sympathetic efferent\", \"scale\":1/0.0008}, \n",
-    "                   4: {\"name\":\"threshold indirect parasympathetic efferent\"},\n",
-    "                   5: {\"name\":\"direct parasympathetic efferent\", \"scale\":1/0.0008}, \n",
-    "                   6: {\"name\":\"rectruitment = coefficient of variation\"}}\n",
-    "data_path = simcore._inputs[0].value\n",
+    "                   4: {\"name\":\"threshold indirect parasympathetic efferent\", \"scale\":-1.0},\n",
+    "                   5: {\"name\":\"direct parasympathetic efferent\", \"scale\":-1/0.0008}, \n",
+    "                   6: {\"name\":\"recruitment = coefficient of variation\"}}\n",
     "\n",
-    "data_frame = pd.read_csv(data_path, sep=',', header=None)\n",
     "\n",
+    "data_frame = pd.read_csv(data_path, sep=',', names=[column_name_map[i][\"name\"] for i in column_name_map.keys()])\n",
     "\n",
     "trace = go.Table(\n",
     "    header=dict(\n",
-    "        values=list(column_name_map[i][\"name\"] for i in range(0, data_frame.columns.size)),\n",
+    "        values=data_frame.columns,\n",
     "        fill=dict(color=\"#C2D4FF\"),\n",
-    "        align=[\"left\"]),\n",
+    "        align=[\"left\"]\n",
+    "    ),\n",
     "    cells=dict(\n",
-    "        values=[data_frame[i] for i in range(0, data_frame.columns.size)],\n",
+    "        values=[data_frame[data_frame.columns[i]] for i in column_name_map.keys()],\n",
     "        fill=dict(color=\"#F5F8FF\"),\n",
-    "        align=[\"left\"])\n",
+    "        align=[\"left\"]\n",
     "    )\n",
+    ")\n",
     "data = [trace]\n",
     "\n",
     "offline.iplot(data, filename='data-table', config={\"displayModeBar\": False})"
@@ -105,26 +122,27 @@
    },
    "outputs": [],
    "source": [
-    "data = [\n",
-    "    go.Scatter(\n",
-    "        x=data_frame[0],\n",
-    "        y=data_frame[i] * (column_name_map[i][\"scale\"] if \"scale\" in column_name_map[i] else 1),\n",
-    "        opacity=0.5,                        \n",
-    "        name=column_name_map[i][\"name\"]\n",
-    "    ) for i in range(1,data_frame.columns.size)\n",
-    "]\n",
+    "def create_graph(data_frame, data_scaling, title, x_axis_title):\n",
+    "    data = [\n",
+    "        go.Scatter(\n",
+    "            x=data_frame[data_frame.columns[0]],\n",
+    "            y=data_frame[data_frame.columns[i]] * data_scaling[i], \n",
+    "            opacity=0.5,                        \n",
+    "            name=data_frame.columns[i]\n",
+    "        ) for i in range(1,data_frame.columns.size)\n",
+    "    ]\n",
     "\n",
-    "layout = go.Layout(\n",
-    "    title='Heart Rate(r)', \n",
-    "    showlegend=True,\n",
-    "    xaxis=dict(\n",
-    "        title=\"time(sec)\"\n",
-    "    ),\n",
-    "    yaxis=dict(\n",
-    "        range=[0,.5]    \n",
-    "    ))\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "offline.iplot(fig, config={\"displayModeBar\": True})"
+    "    layout = go.Layout(\n",
+    "        title=title, \n",
+    "        showlegend=True,\n",
+    "        xaxis=dict(\n",
+    "            title=x_axis_title\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            #range=[0,.5]    \n",
+    "        ))\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    offline.iplot(fig, config={\"displayModeBar\": False})"
    ]
   },
   {
@@ -135,6 +153,36 @@
    },
    "outputs": [],
    "source": [
+    "title=\"Heart Rate(r)\"\n",
+    "heart_axis_colums = [0,1,2,3,5]\n",
+    "heart_rate_data = data_frame.filter(items=[data_frame.columns[i] for i in heart_axis_colums])\n",
+    "heart_rate_data_scaling = [column_name_map[i][\"scale\"] if \"scale\" in column_name_map[i] else 1 for i in heart_axis_colums]\n",
+    "create_graph(data_frame=heart_rate_data, \n",
+    "             data_scaling=heart_rate_data_scaling, \n",
+    "             title=title, \n",
+    "             x_axis_title=\"time(sec)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "hide_input": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are  2  inputs\n",
+      "<bound method DataItem._asdict of DataItem(key='in_1', label='computational data', description='these are computed data out of a pipeline', type='file-url', value='C:\\\\Users\\\\anderegg\\\\Documents\\\\dev\\\\OSPARC\\\\osparc-simcore\\\\services\\\\dy-2Dgraph\\\\data\\\\outputControllerOut.dat', timestamp='2018-05-23T15:34:53.511Z')>\n",
+      "<bound method DataItem._asdict of DataItem(key='in_5', label='some number', description='numbering things', type='integer', value='666', timestamp='2018-05-23T15:34:53.511Z')>\n",
+      "There are  1  outputs\n",
+      "<bound method DataItem._asdict of DataItem(key='out_1', label='some boolean output', description='could be true or false...', type='bool', value='null', timestamp='2018-05-23T15:34:53.511Z')>\n"
+     ]
+    }
+   ],
+   "source": [
     "import pprint\n",
     "print(\"There are \", len(simcore._inputs), \" inputs\")\n",
     "for _in in simcore._inputs:\n",
@@ -144,6 +192,13 @@
     "for _out in simcore._outputs:\n",
     "    pprint.pprint(_out._asdict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
