renamed simcore_api package to simcoreapi

--- a/services/dy-2Dgraph/plotly.ipynb
+++ b/services/dy-2Dgraph/plotly.ipynb
@@ -31,9 +31,9 @@
    },
    "outputs": [],
    "source": [
-    "import simcore_api\n",
-    "from simcore_api import simcore\n",
-    "from simcore_api import config\n",
+    "import simcoreapi\n",
+    "from simcoreapi import simcore\n",
+    "from simcoreapi import config\n",
     "\n",
     "data_path = simcore.inputs[0].value"
    ]
