updated readme updated plotly demo

--- a/services/dy-2Dgraph/plotly.ipynb
+++ b/services/dy-2Dgraph/plotly.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "import simcoreapi\n",
-    "from simcoreapi import simcore\n",
+    "from simcoreapi import PORTS\n",
     "from simcoreapi import config\n",
     "\n",
-    "data_path = simcore.inputs[0].value"
+    "data_path = PORTS.inputs[0].value"
    ]
   },
   {
@@ -172,8 +172,8 @@
    "outputs": [],
    "source": [
     "import pprint\n",
-    "print(\"There are \", len(simcore.inputs), \" inputs\")\n",
-    "for _in in simcore.inputs:\n",
+    "print(\"There are \", len(PORTS.inputs), \" inputs\")\n",
+    "for _in in PORTS.inputs:\n",
     "    pprint.pprint(_in._asdict)\n",
     "\n"
    ]
