--- a/services/dy-2Dgraph/plotly.ipynb
+++ b/services/dy-2Dgraph/plotly.ipynb
@@ -2,19 +2,221 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hide_input": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### notebook-autorun\n",
+       "\n",
+       "This module enables auto-run of certains cells at notebook kernel start.  \n",
+       "It will work **only** for <span style=\"color: red\">**trusted**</span> notebooks.  \n",
+       "\n",
+       "#### 1 - Settings\n",
+       "\n",
+       "The cells to autorun can be determined by one of the 3 args below.  \n",
+       "Only one of them must be specified:  \n",
+       "+ `cells`: List of 0-indexed cells or String representing a list of cells. [Python list slices](https://docs.python.org/2.3/whatsnew/section-slices.html) are allowed. Default is `None`. `cells` is stringified to `str_cells` before passing to javascript. Invalid cell numbers (e.g. greater than the notebook number of cells) are ignored. Examples: [2, 3], '2,3', '2:', ':-2', '4:8', '::-1'  \n",
+       "+ `metadata`: Boolean (default is `False`). If `True`, all cells with medatada `\"autorun\": true` are concerned.  \n",
+       "+ `comment`: Boolean (default is `False`). If `True`, all cells containing a comment `comment_flag` (default is `# AUTORUN`) are concerned.  \n",
+       "\n",
+       "\n",
+       "#### 2 - Security\n",
+       "\n",
+       "Because a notebook is designed to allow the user to write arbitrary code, it has full access to many resources.   \n",
+       "\n",
+       "The typical risks are the following:\n",
+       "+ A notebook has access to your file system and can therefore potentially read/modify/delete any of your files or send them to an attacker, or write a new file (virus).  \n",
+       "+ A notebook may contain javascript in output cells which can read you cookies and local storage and potentially send them to an attacker.  \n",
+       "\n",
+       "See the [Security in notebook documents](https://jupyter-notebook.readthedocs.io/en/stable/security.html#security-in-notebook-documents) section of the official [Jupyter Notebook documentation](https://jupyter-notebook.readthedocs.io/en/stable/index.html) for more info.  \n",
+       "\n",
+       "Therefore you **should review** and **must trust** the notebook before you can use **notebook-autorun**."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you see <IPython.core.display.Javascript object> below, this notebook is not trusted.\n",
+      "As a consequence Autorun cannot work.\n",
+      "Run \"from notebook_autorun import Autorun; Autorun.info()\" for more info.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "\"use strict\";\n",
+       "\n",
+       "console.log('start main');\n",
+       "\n",
+       "require([\n",
+       "\t'jquery',\n",
+       "\t'base/js/dialog',\n",
+       "\t'base/js/events',\n",
+       "\t'base/js/namespace',\n",
+       "\t'notebook/js/celltoolbar',\n",
+       "\t'notebook/js/codecell',\n",
+       "\t'base/js/promises'\n",
+       "], function (\n",
+       "\t$,\n",
+       "\tdialog,\n",
+       "\tevents,\n",
+       "\tJupyter,\n",
+       "\tcelltoolbar,\n",
+       "\tcodecell,\n",
+       "\tpromises\n",
+       ") {\n",
+       "\t\tevents.on('kernel_ready.Kernel', function () {\n",
+       "\t\t\tconsole.log('start autorun');\n",
+       "\t\t\tif (Jupyter.notebook.trusted) {\n",
+       "\t\t\t\t// notebook is trusted js can run\n",
+       "\t\t\t\tconsole.log('notebook is trusted');\n",
+       "\t\t\t\tlet nbCells = Jupyter.notebook.get_cells(),\n",
+       "\t\t\t\t\tarrCells;\n",
+       "\t\t\t\twindow.debugNbCells = nbCells;\n",
+       "\n",
+       "\t\t\t\t\n",
+       "\t\t\t\t\n",
+       "\n",
+       "let getCellsFromString = function(strCells, nbCells) {\n",
+       "\t//strCells contains a Python string representing a list\n",
+       "\n",
+       "\tlet arrCell = [];\n",
+       "\tif (strCells.indexOf(':') > -1) {\n",
+       "\n",
+       "\t\tlet listCell = strCells.split(':'),\n",
+       "\t\t\tstart,\n",
+       "\t\t\tend,\n",
+       "\t\t\tstep;\n",
+       "\n",
+       "\t\tif (listCell.length == 2) {\n",
+       "\t\t\t[start, end] = listCell;\n",
+       "\t\t\tstep = 1;\n",
+       "\t\t}\n",
+       "\t\telse if (listCell.length == 3) {\n",
+       "\t\t\t[start, end, step] = listCell;\n",
+       "\t\t}\n",
+       "\n",
+       "\t\tstart = start !== '' ? parseInt(start) : 0;\n",
+       "\t\tend = end !== '' ? parseInt(end) : nbCells.length;\n",
+       "\t\tstep = step !== '' ? parseInt(step) : 1;\n",
+       "\n",
+       "\t\tstart = start >= 0 ? start : transformNegativeIndex(start, nbCells);\n",
+       "\t\tend = end >= 0 ? end : transformNegativeIndex(end, nbCells);\n",
+       "\n",
+       "\t\tlet increasingOrder = ((start < end) && (step > 0));\n",
+       "\t\tlet decreasingOrder = ((start > end) && (step < 0));\n",
+       "\n",
+       "\t\tlet i;\n",
+       "\t\tif (increasingOrder) {\n",
+       "\t\t\tfor (i = start; i < end; i += step) {\n",
+       "\t\t\t\tarrCell.push(i);\n",
+       "\t\t\t}\n",
+       "\t\t}\n",
+       "\t\telse if (decreasingOrder) {\n",
+       "\t\t\tfor (i = start; i > end; i += step) {\n",
+       "\t\t\t\tarrCell.push(i);\n",
+       "\t\t\t}\n",
+       "\t\t}\n",
+       "\t}\n",
+       "\telse {\n",
+       "\t\tarrCell = strCells.split(',');\n",
+       "\t\tarrCell = arrCell.map(e => {\n",
+       "\t\t\tlet v = parseInt(e);\n",
+       "\t\t\tlet idx = v >=0 ? v : transformNegativeIndex(v, nbCells);\n",
+       "\t\t\treturn idx;\n",
+       "\t\t});\n",
+       "\t}\n",
+       "\treturn arrCell;\n",
+       "};\n",
+       "\n",
+       "let transformNegativeIndex = function(negIndex, nbCells){\n",
+       "\treturn nbCells.length + negIndex;\n",
+       "};\n",
+       "\t\t\t\tconsole.log('str_cells=' + '1:6');\n",
+       "\t\t\t\tarrCells = getCellsFromString('1:6', nbCells);\n",
+       "\t\t\t\t\n",
+       "\n",
+       "\t\t\t\t\n",
+       "\n",
+       "\t\t\t\t\n",
+       "\n",
+       "\t\t\t\tconsole.log(arrCells);\n",
+       "\t\t\t\tfor (let i of arrCells) {\n",
+       "\t\t\t\t\tlet nbCell = nbCells[i];\n",
+       "\t\t\t\t\tif (nbCell) {\n",
+       "\t\t\t\t\t\tconsole.log('execute cell ' + i);\n",
+       "\t\t\t\t\t\tnbCell.execute();\n",
+       "\t\t\t\t\t}\n",
+       "\t\t\t\t\telse {\n",
+       "\t\t\t\t\t\tconsole.log('cell ' + i + ' does not exist');\n",
+       "\t\t\t\t\t}\n",
+       "\t\t\t\t}\n",
+       "\n",
+       "\t\t\t\t\n",
+       "\n",
+       "\t\t\t}\n",
+       "\t\t\telse {\n",
+       "\t\t\t\t// notebook is not trusted let the user know about it\n",
+       "\t\t\t\t// by definition this should never happen as\n",
+       "\t\t\t\t// js cannot run if notebook not trustee\n",
+       "\t\t\t\tconsole.log('notebook is not trusted');\n",
+       "\t\t\t\tconsole.log('nothing is done');\n",
+       "\t\t\t}\n",
+       "\t\t});\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\t});\n",
+       "\n",
+       "console.log('end main');"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "This output cell contains **notebook-autorun** settings:  \n",
+       "```json\n",
+       "   {\"str_cells\": \"1:6\"}  \n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#import os\n",
-    "#os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Desktop\\alternative_config.json\"\n"
+    "from notebook_autorun import Autorun\n",
+    "Autorun.info()\n",
+    "cells = '1:6'\n",
+    "Autorun(cells=cells).add_js()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -27,10 +229,13 @@
       }
      }
     },
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
+    "#import os\n",
+    "#os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Desktop\\alternative_config.json\"\n",
+    "\n",
     "import simcoreapi\n",
     "from simcoreapi import PORTS\n",
     "from simcoreapi import config\n",
@@ -99,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
