corrected dockerfile to use cc use case

--- a/services/dy-2Dgraph/Colleen-Clancy-use-case.ipynb
+++ b/services/dy-2Dgraph/Colleen-Clancy-use-case.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
     "hide_input": false
    },
    "outputs": [],
@@ -21,10 +32,10 @@
       "version": 1,
       "views": {
        "grid_default": {
-        "col": null,
+        "col": 0,
         "height": 20,
         "hidden": false,
-        "row": 19,
+        "row": 0,
         "width": null
        },
        "report_default": {
@@ -48,7 +59,8 @@
     "            go.Scatter(\n",
     "                x=data_frames[df_index][data_frames[df_index].columns[0]],\n",
     "                y=data_frames[df_index][data_frames[df_index].columns[i]],\n",
-    "                opacity=0.5,      \n",
+    "                opacity=0.5, \n",
+    "                hoverinfo=\"none\",\n",
     "                xaxis=(\"x\" + str(df_index + 1)),\n",
     "                yaxis=(\"y\" + str(df_index + 1)),\n",
     "                name=data_frames[df_index].columns[i]\n",
@@ -56,17 +68,18 @@
     "            for i in range(1,data_frames[df_index].columns.size)\n",
     "    ]\n",
     "    \n",
-    "    layout = go.Layout(**kwargs)\n",
+    "    layout = go.Layout(autosize=False,width=500, height=500, **kwargs)\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
-    "    offline.iplot(fig, config={\"displayModeBar\": False})\n",
+    "    offline.iplot(fig, config={\"displayModeBar\": False, \"showLink\":False})\n",
     "\n",
     "def create_graph(data_frame, title=None, x_axis_title=None, y_axis_title = None):\n",
     "    data = [        \n",
     "            go.Scatter(\n",
     "                x=data_frame[data_frame.columns[0]],\n",
     "                y=data_frame[data_frame.columns[i]],\n",
-    "                opacity=0.5,      \n",
-    "                name=data_frame.columns[i]\n",
+    "                opacity=0.5,\n",
+    "                name=data_frame.columns[i],\n",
+    "                hoverinfo=\"none\",\n",
     "            ) \n",
     "            for i in range(1,data_frame.columns.size)\n",
     "            \n",
@@ -74,7 +87,9 @@
     "    \n",
     "    #fig = tools.make_subplots(rows=1, cols=len(data_frames))\n",
     "    layout = go.Layout(\n",
-    "        title=title, \n",
+    "        autosize=False,\n",
+    "        width=500, height=500,\n",
+    "        title=title,         \n",
     "        showlegend=False,\n",
     "        xaxis=dict(\n",
     "            title=x_axis_title\n",
@@ -84,7 +99,7 @@
     "        )        \n",
     "    )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
-    "    offline.iplot(fig, config={\"displayModeBar\": False})"
+    "    offline.iplot(fig, config={\"displayModeBar\": False, \"showLink\":False})"
    ]
   },
   {
@@ -102,7 +117,7 @@
       }
      }
     },
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -114,7 +129,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# from plotall.m\n",
@@ -157,7 +185,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": null,
+        "height": 18,
+        "hidden": false,
+        "row": 20,
+        "width": null
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -166,7 +209,6 @@
     "axis_colums = [0,ynid[39]+1]\n",
     "plot_data = data_frame_ty.filter(items=[data_frame_ty.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)"
    ]
@@ -174,15 +216,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# LCC current (ICa)\n",
-    "title=\"I_C_a (pA/pF)\"\n",
+    "title=\"I<sub>Ca</sub> (pA/pF)\"\n",
     "axis_colums = [0,I_Ca_store-1]\n",
     "plot_data = data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)\n"
    ]
@@ -190,7 +244,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# CaSRT & Caj\n",
@@ -220,10 +287,10 @@
     "                  domain=[0.7,1.0],\n",
     "                  title=\"time (sec)\"),\n",
     "              yaxis=dict(\n",
-    "                  title=\"Ca_S_R_T (mM)\"\n",
+    "                  title=\"[Ca]<sub>SRT</sub> (mM)\"\n",
     "              ),\n",
     "              yaxis2=dict(\n",
-    "                  title=\"Ca Dyad (uM)\", \n",
+    "                  title=\"Ca Dyad (\\u00B5M)\", \n",
     "                  anchor=\"x2\"),\n",
     "              yaxis3=dict(\n",
     "                  title=\"Ca sl (mM)\", \n",
@@ -234,15 +301,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# Cai\n",
-    "title=\"[Ca]_i (\\muM)\"\n",
+    "title=\"[Ca]<sub>i</sub> (\\u00B5M)\"\n",
     "axis_colums = [0,ynid[38]+1]\n",
     "plot_data = data_frame_ty.filter(items=[data_frame_ty.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
+    "             title=None, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)"
    ]
@@ -250,15 +330,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# Ito\n",
-    "title=\"I_t_o (pA/pF)\"\n",
+    "title=\"I<sub>to</sub> (pA/pF)\"\n",
     "axis_colums = [0,Ito-1]\n",
     "plot_data = data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
+    "             title=None, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)\n"
    ]
@@ -266,15 +359,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# INa\n",
-    "title=\"I_N_a (pA/pF)\"\n",
+    "title=\"I<sub>Na</sub> (pA/pF)\"\n",
     "axis_colums = [0,INa-1]\n",
     "plot_data = data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
+    "             title=None, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)\n"
    ]
@@ -282,10 +388,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# IKs and ICFTR\n",
+    "axis_colums = [0,Iks-1]\n",
+    "plot_data = [data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])]\n",
+    "\n",
+    "axis_colums = [0,ICFTR-1]\n",
+    "plot_data.append(data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums]))\n",
+    "\n",
+    "create_graphs(data_frames=plot_data, \n",
+    "              title=None, \n",
+    "              showlegend=False,\n",
+    "              #xaxis=dict(title=\"time (sec)\"),\n",
+    "              xaxis2=dict(title=\"time (sec)\", anchor=\"y2\"),\n",
+    "              yaxis=dict(\n",
+    "                  domain=[0.6,1.0],\n",
+    "                  title=\"I<sub>Ks</sub> (pA/pF)\"\n",
+    "              ),\n",
+    "              yaxis2=dict(\n",
+    "                  domain=[0,0.5],\n",
+    "                  title=\"I<sub>CFTR</sub>\", \n",
+    "                  anchor=\"x2\")\n",
+    "             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "# IKr and IK1\n",
     "axis_colums = [0,Ikr-1]\n",
     "plot_data = [data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])]\n",
     "\n",
@@ -295,20 +456,15 @@
     "create_graphs(data_frames=plot_data, \n",
     "              title=None, \n",
     "              showlegend=False,\n",
-    "              xaxis=dict(                  \n",
-    "                  title=\"time (sec)\"\n",
-    "              ),\n",
-    "              xaxis2=dict(\n",
-    "                  \n",
-    "                  title=\"time (sec)\"),\n",
-    "              \n",
+    "              #xaxis=dict(title=\"time (sec)\"),\n",
+    "              xaxis2=dict(title=\"time (sec)\", anchor=\"y2\"),\n",
     "              yaxis=dict(\n",
     "                  domain=[0.6,1.0],\n",
-    "                  title=\"I_K_r (pA/pF)\"\n",
+    "                  title=\"I<sub>Kr</sub> (pA/pF)\"\n",
     "              ),\n",
     "              yaxis2=dict(\n",
     "                  domain=[0,0.5],\n",
-    "                  title=\"I_K_1 (pA/pF)\", \n",
+    "                  title=\"I<sub>K1</sub> (pA/pF)\", \n",
     "                  anchor=\"x2\")\n",
     "             )"
    ]
@@ -316,7 +472,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# [Na]\n",
@@ -336,13 +505,13 @@
     "              xaxis2=dict(title=\"time (sec)\", domain=[0.4,0.6]),\n",
     "              xaxis3=dict(title=\"time (sec)\", domain=[0.7,1.0]),\n",
     "              yaxis=dict(\n",
-    "                  title=\"[Na]_j\"\n",
+    "                  title=\"[Na]<sub>j</sub>\"\n",
     "              ),\n",
     "              yaxis2=dict(\n",
-    "                  title=\"[Na]_s_l\", \n",
+    "                  title=\"[Na]<sub>s<sup>l</sup></sub>\", \n",
     "                  anchor=\"x2\"),\n",
     "              yaxis3=dict(\n",
-    "                  title=\"[Na]_i (mmol/L relevant compartment\", \n",
+    "                  title=\"[Na]<sub>i</sub> (mmol/L relevant compartment\", \n",
     "                  anchor=\"x3\")\n",
     "             )"
    ]
@@ -350,15 +519,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# I_NCX\n",
-    "title=\"I_N_C_X (pA/pF)\"\n",
+    "title=\"I<sub>NCX</sub> (pA/pF)\"\n",
     "axis_colums = [0,Incx-1]\n",
     "plot_data = data_frame_ar.filter(items=[data_frame_ar.columns[i] for i in axis_colums])\n",
     "create_graph(data_frame=plot_data, \n",
-    "             title=title, \n",
+    "             title=None, \n",
     "             x_axis_title=\"time (sec)\",\n",
     "             y_axis_title=title)\n"
    ]
@@ -366,7 +548,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true
+   },
    "outputs": [],
    "source": [
     "# RyR fluxes\n",
@@ -384,10 +579,10 @@
     "              showlegend=False,\n",
     "              xaxis=dict(title=None),\n",
     "              xaxis2=dict(title=None),\n",
-    "              xaxis3=dict(title=None),\n",
+    "              xaxis3=dict(title=\"time (sec)\", anchor=\"y3\"),\n",
     "              yaxis=dict(\n",
     "                  domain=[0.7,1.0],\n",
-    "                  title=\"JRyR_t_o_t\"\n",
+    "                  title=\"JRyR<sub>tot</sub>\"\n",
     "              ),\n",
     "              yaxis2=dict(\n",
     "                  domain=[0.4,0.6],\n",
